style: modif css

--- a/html/index.html
+++ b/html/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/font.css">
     <link rel="stylesheet" href="../css/style.css">
+
 </head>
 
 <body>
@@ -28,6 +29,16 @@
                         <a href="#">CONTACT</a>
                     </div>
                 </nav>
+                <!-- <nav>
+                    <a class="menu" href="#"><span id="burger"></span></a>
+                    <ul class="list-unstyled">
+                        <li><a href="#">NOTRE RÉVOLUTION</a></li>
+                        <li><a href="#">PARTAGE DE FRAIS</a></li>
+                        <li><a href="#">TARIFS</a></li>
+                        <li><a href="#">BLOG</a></li>
+                        <li><a href="#">CONTACT</a></li>
+                    </ul>
+                </nav> -->
             </header>
             <main>
                 <article>
@@ -207,7 +218,8 @@
             </nav>
         </footer>
     </div>
-
+    <script type="burguer/javascript" src="../js/burguer.js"></script>
 </body>
+
 
 </html>
